.provarCaches/00D5h000009Q6XQEA0/objects/provar__Code_Scan__c.object
<CustomObject>
    <fields>
        <fullName>provar__Code_Scan_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Code Scan Schedule</label>
        <referenceTo>provar__Code_Scan_Schedule__c</referenceTo>
        <relationshipLabel>Code Scans</relationshipLabel>
        <relationshipName>Code_Scans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>provar__Is_Latest__c</fullName>
        <formula>provar__Scan_Date__c ==  provar__System__r.provar__Latest_Code_Scan__c</formula>
        <label>Is Latest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>provar__Scan_Date__c</fullName>
        <label>Scan Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>provar__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__System__c</fullName>
        <label>System</label>
        <referenceTo>provar__System__c</referenceTo>
        <relationshipLabel>Code Scans</relationshipLabel>
        <relationshipName>Code_Scans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Tool_Version__c</fullName>
        <label>Tool Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Tool__c</fullName>
        <label>Tool</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Code Scan</label>
    <listViews>
        <fullName>provar__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CSC-{000000}</displayFormat>
        <label>Code Scan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Code Scans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>